<resources>
    <string name="app_name">Driver Ex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="driver_ex">DriverEx</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="employee">Employee</string>
    <string name="all_contacts">All Contacts</string>
    <string name="mobile">Mobile</string>
    <string name="work">Work</string>
    <string name="personal">Personal</string>

    <string name="individual_name">%s %s</string>
    <string name="sharedPrefLogCheck">inOrOut</string>
    <string name="sharedPrefAccessToken">ACCESS_TOKEN</string>
    <string name="sharedPrefIn">IN</string>
    <string name="sharedPrefOut">OUT</string>
    <string name="sharedPrefFavKey">FAV</string>
    <string name="sharedPrefFav">YES</string>
    <string name="sharedPrefNotFav">NOT</string>

</resources>