<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.userdetailfragment.UserDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/tool_bar_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:paddingBottom="25dp"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvPersonalEmail"
                style="@style/employeeDetailStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="55dp"
                android:maxLines="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivMail"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <ImageView
                android:id="@+id/ivMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_baseline_mail_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <TextView
                android:id="@+id/tvPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/personal"
                app:layout_constraintStart_toEndOf="@+id/ivMail"
                app:layout_constraintTop_toBottomOf="@+id/tvPersonalEmail" />

            <TextView
                android:id="@+id/tvOfficeNum"
                style="@style/employeeDetailStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="55dp"
                android:maxLines="2"

                app:layout_constraintEnd_toStartOf="@+id/ivWorkMsg"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/ivWorkNum"
                app:layout_constraintTop_toBottomOf="@+id/tvMobile" />

            <ImageView
                android:id="@+id/ivWorkNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_baseline_call_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMobile" />

            <ImageView
                android:id="@+id/ivWorkMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_baseline_message_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivMobileMsg" />

            <TextView
                android:id="@+id/tvOffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/work"
                app:layout_constraintStart_toEndOf="@+id/ivWorkNum"
                app:layout_constraintTop_toBottomOf="@+id/tvOfficeNum" />

            <ImageView
                android:id="@+id/ivUserPhoto"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="center"
                android:src="@drawable/contact_photo"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp" />


            <ImageView
                android:id="@+id/ivMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_baseline_call_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserPhoto" />

            <TextView
                android:id="@+id/tvMobileNum"
                style="@style/employeeDetailStyle"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="55dp"
                android:layout_width="match_parent"
                android:maxLines="2"
                app:layout_constraintEnd_toStartOf="@+id/ivMobileMsg"
                app:layout_constraintStart_toEndOf="@+id/ivMobile"
                app:layout_constraintTop_toBottomOf="@+id/ivUserPhoto" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/mobile"
                app:layout_constraintStart_toEndOf="@+id/ivMobile"
                app:layout_constraintTop_toBottomOf="@+id/tvMobileNum" />

            <ImageView
                android:id="@+id/ivMobileMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_baseline_message_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivUserPhoto" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:background="#AEAEAE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvOffice" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fabFavourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintBottom_toBottomOf="@+id/ivUserPhoto"
                app:layout_constraintEnd_toEndOf="parent"
                android:focusable="true" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_marginEnd="65dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginBottom="24dp"
                android:textColor="@color/app_color"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/ivUserPhoto"
                app:layout_constraintEnd_toStartOf="@+id/fabFavourite"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</LinearLayout>
